--- a/css/rutvik-little-fashion.css
+++ b/css/rutvik-little-fashion.css
@@ -1,8 +1,8 @@
 /*
 
-Tooplate 2127 Little Fashion
+rutvik 2127 L
 
-https://www.tooplate.com/view/2127-little-fashion
+#view/2127-little-fashion
 
 */
 
